[gd_scene format=3 uid="uid://b2g1q7vydoy37"]

[ext_resource type="Script" uid="uid://buvy4d8ipwidm" path="res://lobby.gd" id="1_ll2xe"]
[ext_resource type="Texture2D" uid="uid://dkhf2r7d258y8" path="res://0270c3583503546586f6f6b3bca27f01.png" id="2_xrgmn"]

[node name="Lobby" type="Control" unique_id=221627476]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ll2xe")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="." unique_id=739536570]
layout_mode = 0
offset_right = 1284.0
offset_bottom = 723.0
texture = ExtResource("2_xrgmn")
expand_mode = 1

[node name="HostButton" type="Button" parent="." unique_id=1831501438]
layout_mode = 0
offset_left = 444.0
offset_top = 99.0
offset_right = 857.0
offset_bottom = 189.0
text = "Host"

[node name="JoinButton" type="Button" parent="." unique_id=944949698]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = 229.0
offset_right = 902.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="StartButton" type="Button" parent="." unique_id=375637841]
layout_mode = 0
offset_left = 525.0
offset_top = 430.0
offset_right = 787.0
offset_bottom = 549.0
text = "Start"

[node name="IPInput" type="LineEdit" parent="." unique_id=1273925746]
layout_mode = 0
offset_left = 364.0
offset_top = 564.0
offset_right = 988.0
offset_bottom = 677.0

[node name="DebugButton" type="Button" parent="." unique_id=719508107]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.184
anchor_bottom = 2.538
offset_right = 183.64
offset_bottom = 75.479996
text = "Debug"
